--- a/portfolio.html
+++ b/portfolio.html
@@ -1,163 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@700;800&family=Roboto:wght@400;500;700;900&family=Sassy+Frass&display=swap"
-      rel="stylesheet"
-    />
-    <title>WebStudio</title>
-  </head>
-  <body>
-    <!-- Шапка сайта (Навигация) -->
-    <header class="header">
-      <nav>
-        <a href="./index.html" class="logo"><span style="color: #4D5AE5; ">WEB</span>STUDIO</span> </a>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./css/style.css" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@700;800&family=Roboto:wght@400;500;700;900&family=Sassy+Frass&display=swap"
+			rel="stylesheet"
+		/>
+		<title>WebStudio</title>
+	</head>
+	<body>
+		<!-- Шапка сайта (Навигация) -->
+		<header class="header">
+			<nav>
+				<a href="./index.html" class="logo"><span style="color: #4d5ae5">WEB</span>STUDIO</a>
 
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="link">Studio</a></li>
-          <li><a href="./portfolio.html" class="link">Portfolio</a></li>
-          <li><a href="" class="link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address>
-        <ul class="auth-nav list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
-    </header>
-    <!-- Section 1 links+photo-->
-    <section class="section">
-      <h2 class="visually-hidden title" >Section 1</h2>
-      <ul class="second-menu list">
-        <li><button type="button" class="btn">All</button></li>
-        <li><button type="button" class="btn">Web Site</button></li>
-        <li><button type="button" class="btn">App</button></li>
-        <li><button type="button" class="btn">Design</button></li>
-        <li><button type="button" class="btn">Marketing</button></li>
-      </ul>
-      <ul class="list">
-        <li>
-          <img
-            src="./images/portfolio/section1/img1.jpg"
-            alt="list of apps"
-            width="360"
-            height="300"
-          />
-          <h3 class="subtitle">Banking App Interface Concept</h3>
-          <p class="text">App</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/section1/img2.jpg"
-            alt="smartphone in hand"
-            width="360"
-            height="300"
-          />
-          <h3 class="subtitle">Cashless Payment</h3>
-          <p class="text">Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/section1/img3.jpg"
-            alt="laptop and smartphone"
-            width="360"
-            height="300"
-          />
-          <h3 class="subtitle">Meditaion App</h3>
-          <p class="text">App</p>
-        </li>
-      </ul>
-    </section>
-    <!-- Section 2 photo-->
-    <section class="section">
-      <h2 class="visually-hidden title">Section 2</h2>
-      <ul class="list">
-        <li>
-          <img
-            src="./images/portfolio/section2/img1.jpg"
-            alt="drive a car"
-            width="360"
-            height="300"
-          />
-          <h3 class="subtitle">Taxi Service</h3>
-          <p class="text">Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/section2/img2.jpg"
-            alt="smartphone"
-            width="360"
-            height="300"
-          />
-          <h3 class="subtitle">Screen Illustrations</h3>
-          <p class="text">Design</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/section2/img3.jpg"
-            alt="smiler girl"
-            width="360"
-            height="300"
-          />
-          <h3 class="subtitle">Online Courses</h3>
-          <p class="text">Marketing</p>
-        </li>
-      </ul>
-    </section>
-    <!-- Section 3 photo-->
-    <section class="section">
-      <h2 class="visually-hidden title">Section 3</h2>
-      <ul class="list">
-        <li>
-          <img
-            src="./images/portfolio/section3/img1.jpg"
-            alt="list of opportunities"
-            width="360"
-            height="300"
-          />
-          <h3 class="subtitle">Instagram Stories Concept</h3>
-          <p class="text">Design</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/section3/img2.jpg"
-            alt="beg with ftuits"
-            width="360"
-            height="300"
-          />
-          <h3 class="subtitle">Organic Food</h3>
-          <p class="text">Web Site</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/section3/img3.jpg"
-            alt="nice coffee"
-            width="360"
-            height="300"
-          />
-          <h3 class="subtitle">Fresh Coffee</h3>
-          <p class="text">Web Site</p>
-        </li>
-      </ul>
-    </section>
-    <!-- Footer -->
-    <div class="footer"><footer>
-      <a href="./index.html" class="logo"><span style="color:#4D5AE5">WEB</span>STUDIO</a>
-      <p class="text-footer">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </footer></div>
-  </body>
+				<ul class="site-nav list">
+					<li><a href="./index.html" class="link">Studio</a></li>
+					<li><a href="./portfolio.html" class="link">Portfolio</a></li>
+					<li><a href="" class="link">Contacts</a></li>
+				</ul>
+			</nav>
+			<address>
+				<ul class="auth-nav list">
+					<li>
+						<a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+					</li>
+					<li>
+						<a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+					</li>
+				</ul>
+			</address>
+		</header>
+		<!-- Section 1 links+photo-->
+		<section class="section">
+			<h2 class="visually-hidden title">Section 1</h2>
+			<ul class="second-menu list">
+				<li><button type="button" class="btn">All</button></li>
+				<li><button type="button" class="btn">Web Site</button></li>
+				<li><button type="button" class="btn">App</button></li>
+				<li><button type="button" class="btn">Design</button></li>
+				<li><button type="button" class="btn">Marketing</button></li>
+			</ul>
+			<ul class="list">
+				<li>
+					<img src="./images/portfolio/section1/img1.jpg" alt="list of apps" width="360" height="300" />
+					<h3 class="subtitle">Banking App Interface Concept</h3>
+					<p class="text">App</p>
+				</li>
+				<li>
+					<img src="./images/portfolio/section1/img2.jpg" alt="smartphone in hand" width="360" height="300" />
+					<h3 class="subtitle">Cashless Payment</h3>
+					<p class="text">Marketing</p>
+				</li>
+				<li>
+					<img src="./images/portfolio/section1/img3.jpg" alt="laptop and smartphone" width="360" height="300" />
+					<h3 class="subtitle">Meditaion App</h3>
+					<p class="text">App</p>
+				</li>
+			</ul>
+		</section>
+		<!-- Section 2 photo-->
+		<section class="section">
+			<h2 class="visually-hidden title">Section 2</h2>
+			<ul class="list">
+				<li>
+					<img src="./images/portfolio/section2/img1.jpg" alt="drive a car" width="360" height="300" />
+					<h3 class="subtitle">Taxi Service</h3>
+					<p class="text">Marketing</p>
+				</li>
+				<li>
+					<img src="./images/portfolio/section2/img2.jpg" alt="smartphone" width="360" height="300" />
+					<h3 class="subtitle">Screen Illustrations</h3>
+					<p class="text">Design</p>
+				</li>
+				<li>
+					<img src="./images/portfolio/section2/img3.jpg" alt="smiler girl" width="360" height="300" />
+					<h3 class="subtitle">Online Courses</h3>
+					<p class="text">Marketing</p>
+				</li>
+			</ul>
+		</section>
+		<!-- Section 3 photo-->
+		<section class="section">
+			<h2 class="visually-hidden title">Section 3</h2>
+			<ul class="list">
+				<li>
+					<img src="./images/portfolio/section3/img1.jpg" alt="list of opportunities" width="360" height="300" />
+					<h3 class="subtitle">Instagram Stories Concept</h3>
+					<p class="text">Design</p>
+				</li>
+				<li>
+					<img src="./images/portfolio/section3/img2.jpg" alt="beg with ftuits" width="360" height="300" />
+					<h3 class="subtitle">Organic Food</h3>
+					<p class="text">Web Site</p>
+				</li>
+				<li>
+					<img src="./images/portfolio/section3/img3.jpg" alt="nice coffee" width="360" height="300" />
+					<h3 class="subtitle">Fresh Coffee</h3>
+					<p class="text">Web Site</p>
+				</li>
+			</ul>
+		</section>
+		<!-- Footer -->
+		<div class="footer"
+			><footer>
+				<a href="./index.html" class="logo"><span style="color: #4d5ae5">WEB</span>STUDIO</a>
+				<p class="text-footer">
+					Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+				</p>
+			</footer></div
+		>
+	</body>
 </html>
