added background colors

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<!-- Шапка сайта (Навигация) -->
 		<header class="header">
 			<nav>
-				<a href="./index.html" class="logo"><span style="color: #4d5ae5">WEB</span>STUDIO</a>
+				<a href="./index.html" class="logo">WEB<span style="color: #2e2f42">STUDIO</span></a>
 
 				<ul class="site-nav list">
 					<li><a href="./index.html" class="link">Studio</a></li>
@@ -36,16 +36,18 @@
 		</header>
 		<!-- Главное Фото + Кнопка-->
 		<main>
-			<section>
-				<h1 class="hero">Effective Solutions for Your Business</h1>
-				<button type="button" class="btn">Order Service</button>
-			</section>
+			<div class="background">
+				<section>
+					<h1 class="hero">Effective Solutions for Your Business</h1>
+					<button type="button" class="btn">Order Service</button>
+				</section>
+			</div>
 
 			<!-- Секция 1 -->
 
 			<section>
 				<h2 class="visually-hidden title">Section 1</h2>
-				<ul>
+				<ul class="list">
 					<li>
 						<h3 class="subtitle">Strategy</h3>
 						<p class="text">
@@ -77,7 +79,7 @@
 
 			<section>
 				<h2 class="title">What are we doing</h2>
-				<ul>
+				<ul class="list">
 					<li>
 						<img src="./images/index/screen.jpg" alt="Deep analysis of company" width="360" />
 					</li>
@@ -94,7 +96,7 @@
 
 			<section>
 				<h2 class="title">Our Team</h2>
-				<ul>
+				<ul class="list">
 					<li>
 						<img src="./images/index/Mark.jpg" alt="Mark Guerrero" width="264" />
 						<h3 class="subtitle">Mark Guerrero</h3>
@@ -119,9 +121,9 @@
 			</section>
 		</main>
 		<!-- Футер -->
-		<div class="footer"
+		<div class="background"
 			><footer>
-				<a href="./index.html" class="logo"><span style="color: #4d5ae5">WEB</span>STUDIO</a>
+				<a href="./index.html" class="logo">WEB<span style="color: #f4f4fd">STUDIO</span></a>
 				<p class="text-footer">
 					Increase the flow of customers and sales for your business with digital marketing & growth solutions.
 				</p>
