--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 		<!-- Шапка сайта (Навигация) -->
 		<header class="header">
 			<nav>
-				<a href="./index.html" class="logo"><span style="color: #4d5ae5">WEB</span>STUDIO</a>
+				<a href="./index.html" class="logo">WEB<span style="color: #2e2f42">STUDIO</span></a>
 
 				<ul class="site-nav list">
 					<li><a href="./index.html" class="link">Studio</a></li>
@@ -105,9 +105,9 @@
 			</ul>
 		</section>
 		<!-- Footer -->
-		<div class="footer"
+		<div class="background"
 			><footer>
-				<a href="./index.html" class="logo"><span style="color: #4d5ae5">WEB</span>STUDIO</a>
+				<a href="./index.html" class="logo">WEB<span style="color: #f4f4fd">STUDIO</span></a>
 				<p class="text-footer">
 					Increase the flow of customers and sales for your business with digital marketing & growth solutions.
 				</p>
