--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,8 @@
 		</header>
 		<!-- Section 1 links+photo-->
 		<section class="section">
-			<h2 class="visually-hidden title">Section 1</h2>
+			<h1 class="visually-hidden title">Hero</h1>
+			<h2 class="visually-hidden title">Second Menu</h2>
 			<ul class="second-menu list">
 				<li><button type="button" class="btn">All</button></li>
 				<li><button type="button" class="btn">Web Site</button></li>
