--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 		<!-- Шапка сайта (Навигация) -->
 		<header class="header">
 			<nav>
-				<a href="./index.html" class="logo">WEB<span style="color: #2e2f42">STUDIO</span></a>
+				<div class="change-color">
+					<a href="./index.html" class="color-logo-web">WEB<span class="color-logo-studio">STUDIO</span></a></div
+				>
 
 				<ul class="site-nav list">
 					<li><a href="./index.html" class="link">Studio</a></li>
@@ -34,12 +36,12 @@
 				</ul>
 			</address>
 		</header>
-		<!-- Главное Фото + Кнопка-->
+		<!-- HERO + Button-->
 		<main>
-			<div class="background">
+			<div class="background-hero">
 				<section>
 					<h1 class="hero">Effective Solutions for Your Business</h1>
-					<button type="button" class="btn">Order Service</button>
+					<button type="button" class="btn-order">Order Service</button>
 				</section>
 			</div>
 
@@ -81,13 +83,13 @@
 				<h2 class="title">What are we doing</h2>
 				<ul class="list">
 					<li>
-						<img src="./images/index/screen.jpg" alt="Deep analysis of company" width="360" />
+						<a href=""> <img src="./images/index/screen.jpg" alt="Deep analysis of company" width="360" /></a>
 					</li>
 					<li>
-						<img src="./images/index/phone.jpg" alt="Preparation of decisions " width="360" />
+						<a href=""> <img src="./images/index/phone.jpg" alt="Preparation of decisions " width="360" /></a>
 					</li>
 					<li>
-						<img src="./images/index/NB.jpg" alt="24/7 costomer support" width="360" />
+						<a href=""> <img src="./images/index/NB.jpg" alt="24/7 costomer support" width="360" /></a>
 					</li>
 				</ul>
 			</section>
@@ -97,33 +99,41 @@
 			<section>
 				<h2 class="title">Our Team</h2>
 				<ul class="list">
-					<li>
-						<img src="./images/index/Mark.jpg" alt="Mark Guerrero" width="264" />
-						<h3 class="subtitle">Mark Guerrero</h3>
-						<p class="text">Product Designer</p>
+					<li
+						><a href="" class="link">
+							<img src="./images/index/Mark.jpg" alt="Mark Guerrero" width="264" />
+							<h3 class="subtitle">Mark Guerrero</h3>
+							<p class="text">Product Designer</p></a
+						>
 					</li>
-					<li>
-						<img src="./images/index/Tom.jpg" alt="Ton Ford" width="264" />
-						<h3>Tom Ford</h3>
-						<p class="text">Frontend Developer</p>
+					<li
+						><a href="" class="link">
+							<img src="./images/index/Tom.jpg" alt="Ton Ford" width="264" />
+							<h3>Tom Ford</h3>
+							<p class="text">Frontend Developer</p></a
+						>
 					</li>
-					<li>
-						<img src="./images/index/Camila.jpg" alt="Camila Garcia" width="264" />
-						<h3 class="subtitle">Camila Garcia</h3>
-						<p class="text">Marketing</p>
+					<li
+						><a href="" class="link">
+							<img src="./images/index/Camila.jpg" alt="Camila Garcia" width="264" />
+							<h3 class="subtitle">Camila Garcia</h3>
+							<p class="text">Marketing</p></a
+						>
 					</li>
-					<li>
-						<img src="./images/index/Deniel.jpg" alt="Daniel Wilson" width="264" />
-						<h3 class="subtitle">Daniel Wilson</h3>
-						<p class="text">UI Designer</p>
+					<li
+						><a href="" class="link">
+							<img src="./images/index/Deniel.jpg" alt="Daniel Wilson" width="264" />
+							<h3 class="subtitle">Daniel Wilson</h3>
+							<p class="text">UI Designer</p></a
+						>
 					</li>
 				</ul>
 			</section>
 		</main>
 		<!-- Футер -->
-		<div class="background"
+		<div class="background-footer"
 			><footer>
-				<a href="./index.html" class="logo">WEB<span style="color: #f4f4fd">STUDIO</span></a>
+				<a href="./index.html" class="color-logo-web">WEB<span class="color-logo-studio-footer">STUDIO</span></a>
 				<p class="text-footer">
 					Increase the flow of customers and sales for your business with digital marketing & growth solutions.
 				</p>
