--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 		<!-- Шапка сайта (Навигация) -->
 		<header class="header">
 			<nav>
-				<a href="./index.html" class="logo">WEB<span style="color: #2e2f42">STUDIO</span></a>
+				<a href="./index.html" class="color-logo-web">WEB<span class="color-logo-studio">STUDIO</span></a>
 
 				<ul class="site-nav list">
 					<li><a href="./index.html" class="link">Studio</a></li>
@@ -39,76 +39,84 @@
 			<h1 class="visually-hidden title">Hero</h1>
 			<h2 class="visually-hidden title">Second Menu</h2>
 			<ul class="second-menu list">
-				<li><button type="button" class="btn">All</button></li>
-				<li><button type="button" class="btn">Web Site</button></li>
-				<li><button type="button" class="btn">App</button></li>
-				<li><button type="button" class="btn">Design</button></li>
-				<li><button type="button" class="btn">Marketing</button></li>
+				<li><button type="button" class="btn-second">All</button></li>
+				<li><button type="button" class="btn-second">Web Site</button></li>
+				<li><button type="button" class="btn-second">App</button></li>
+				<li><button type="button" class="btn-second">Design</button></li>
+				<li><button type="button" class="btn-second">Marketing</button></li>
 			</ul>
 			<ul class="list">
-				<li>
-					<img src="./images/portfolio/section1/img1.jpg" alt="list of apps" width="360" height="300" />
-					<h3 class="subtitle">Banking App Interface Concept</h3>
-					<p class="text">App</p>
+				<li
+					><a href="" class="link"
+						><img src="./images/portfolio/section1/img1.jpg" alt="list of apps" width="360" height="300" />
+						<h3 class="subtitle">Banking App Interface Concept</h3>
+						<p class="text">App</p></a
+					>
 				</li>
-				<li>
-					<img src="./images/portfolio/section1/img2.jpg" alt="smartphone in hand" width="360" height="300" />
-					<h3 class="subtitle">Cashless Payment</h3>
-					<p class="text">Marketing</p>
+				<li
+					><a href="" class="link">
+						<img src="./images/portfolio/section1/img2.jpg" alt="smartphone in hand" width="360" height="300" />
+						<h3 class="subtitle">Cashless Payment</h3>
+						<p class="text">Marketing</p></a
+					>
 				</li>
-				<li>
-					<img src="./images/portfolio/section1/img3.jpg" alt="laptop and smartphone" width="360" height="300" />
-					<h3 class="subtitle">Meditaion App</h3>
-					<p class="text">App</p>
+				<li
+					><a href="" class="link">
+						<img src="./images/portfolio/section1/img3.jpg" alt="laptop and smartphone" width="360" height="300" />
+						<h3 class="subtitle">Meditaion App</h3>
+						<p class="text">App</p></a
+					>
 				</li>
-			</ul>
-		</section>
-		<!-- Section 2 photo-->
-		<section class="section">
-			<h2 class="visually-hidden title">Section 2</h2>
-			<ul class="list">
-				<li>
-					<img src="./images/portfolio/section2/img1.jpg" alt="drive a car" width="360" height="300" />
-					<h3 class="subtitle">Taxi Service</h3>
-					<p class="text">Marketing</p>
+
+				<li
+					><a href="" class="link">
+						<img src="./images/portfolio/section2/img1.jpg" alt="drive a car" width="360" height="300" />
+						<h3 class="subtitle">Taxi Service</h3>
+						<p class="text">Marketing</p></a
+					>
 				</li>
-				<li>
-					<img src="./images/portfolio/section2/img2.jpg" alt="smartphone" width="360" height="300" />
-					<h3 class="subtitle">Screen Illustrations</h3>
-					<p class="text">Design</p>
+				<li
+					><a href="" class="link">
+						<img src="./images/portfolio/section2/img2.jpg" alt="smartphone" width="360" height="300" />
+						<h3 class="subtitle">Screen Illustrations</h3>
+						<p class="text">Design</p></a
+					>
 				</li>
-				<li>
-					<img src="./images/portfolio/section2/img3.jpg" alt="smiler girl" width="360" height="300" />
-					<h3 class="subtitle">Online Courses</h3>
-					<p class="text">Marketing</p>
+				<li
+					><a href="" class="link">
+						<img src="./images/portfolio/section2/img3.jpg" alt="smiler girl" width="360" height="300" />
+						<h3 class="subtitle">Online Courses</h3>
+						<p class="text">Marketing</p></a
+					>
 				</li>
-			</ul>
-		</section>
-		<!-- Section 3 photo-->
-		<section class="section">
-			<h2 class="visually-hidden title">Section 3</h2>
-			<ul class="list">
-				<li>
-					<img src="./images/portfolio/section3/img1.jpg" alt="list of opportunities" width="360" height="300" />
-					<h3 class="subtitle">Instagram Stories Concept</h3>
-					<p class="text">Design</p>
+
+				<li
+					><a href="" class="link">
+						<img src="./images/portfolio/section3/img1.jpg" alt="list of opportunities" width="360" height="300" />
+						<h3 class="subtitle">Instagram Stories Concept</h3>
+						<p class="text">Design</p></a
+					>
 				</li>
-				<li>
-					<img src="./images/portfolio/section3/img2.jpg" alt="beg with ftuits" width="360" height="300" />
-					<h3 class="subtitle">Organic Food</h3>
-					<p class="text">Web Site</p>
+				<li
+					><a href="" class="link">
+						<img src="./images/portfolio/section3/img2.jpg" alt="beg with ftuits" width="360" height="300" />
+						<h3 class="subtitle">Organic Food</h3>
+						<p class="text">Web Site</p></a
+					>
 				</li>
-				<li>
-					<img src="./images/portfolio/section3/img3.jpg" alt="nice coffee" width="360" height="300" />
-					<h3 class="subtitle">Fresh Coffee</h3>
-					<p class="text">Web Site</p>
+				<li
+					><a href="" class="link">
+						<img src="./images/portfolio/section3/img3.jpg" alt="nice coffee" width="360" height="300" />
+						<h3 class="subtitle">Fresh Coffee</h3>
+						<p class="text">Web Site</p></a
+					>
 				</li>
 			</ul>
 		</section>
 		<!-- Footer -->
-		<div class="background"
+		<div class="background-footer"
 			><footer>
-				<a href="./index.html" class="logo">WEB<span style="color: #f4f4fd">STUDIO</span></a>
+				<a href="./index.html" class="color-logo-web">WEB<span class="color-logo-studio-footer">STUDIO</span></a>
 				<p class="text-footer">
 					Increase the flow of customers and sales for your business with digital marketing & growth solutions.
 				</p>
