change color text

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 					<li
 						><a href="" class="link">
 							<img src="./images/index/Tom.jpg" alt="Ton Ford" width="264" />
-							<h3>Tom Ford</h3>
+							<h3 class="subtitle">Tom Ford</h3>
 							<p class="text">Frontend Developer</p></a
 						>
 					</li>
