--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 			<!-- Секция 3 -->
 
-			<section>
+			<section class="section-our-team">
 				<h2 class="title">Our Team</h2>
 				<ul class="list">
 					<li
